dotnet/include/amzi.h

typedef  int   RC;          /* intended to be 0 for OK, else err no. */
typedef int TF;             /* intended for Prolog returns */
typedef   void *      VOIDptr;
// Windows 64 defines long as 32, longlong as 64

typedef __int64             intC;
// Unix 64 defines long as 64

typedef long             intC;
typedef long              intC;
/* Various Prolog types */

typedef void* TERM;
typedef TERM *     TERMptr;
typedef uintCH     ARITY;
typedef ARITY *    ARITYptr;
// don't change these without changing
// various language wrappers.
typedef enum
{
   pERR = -1,
   pATOM,
   pINT,
   pSTR,
   pFLOAT,
   pSTRUCT,
   pLIST,
   pTERM,
   pADDR,
   pVAR,
   pWSTR,
   pWATOM,
	pREAL
} pTYPE;
// don't change these without changing
// various language wrappers.
typedef enum 
{
   cAATOM,
   cASTR,
   cINT,
   cLONG,
   cSHORT,
   cFLOAT,
   cDOUBLE,
   cADDR,
   cTERM,
   cWSTR,
   cWATOM,
   // used to break apart :/2 structures
   cMOD,
   cGOAL
} cTYPE;
typedef enum
{
   CUR_IN,
   CUR_OUT,
   CUR_ERR,
   USER_IN,
   USER_OUT,
   USER_ERR
} STREAM;
typedef void * ENGid;
typedef TF (EXPFUNC *ExtPred)(VOIDptr);
typedef TF (*ExtPred)(VOIDptr);
/*   Note that these functions expect Unicode characters
   in both the strings and ints.  For ANSI characters,
   the ints can simply be cast, but for the string in
   puts the routine mbstowcs() can be used to convert
   an ASNI string to a wide Unicode string. */
typedef int  (lsCALLTYPE *pX_GETC)(VOIDptr);
typedef int  (lsCALLTYPE *pX_UNGETC)(VOIDptr, int);
typedef int  (lsCALLTYPE *pX_PUTC)(VOIDptr, int);
typedef int  (lsCALLTYPE *pX_PUTSA)(VOIDptr, char*);
typedef int  (lsCALLTYPE *pX_PUTSW)(VOIDptr, wchar_t*);
typedef PRED_INITA * PRED_INITAptr;
#define lsInit lsInitW
#define lsAddLSX lsAddLSXW
#define lsAddPred lsAddPredW
#define lsInitPreds lsInitPredsW
#define lsLoad lsLoadW
#define lsExecStr lsExecStrW
#define lsCallStr lsCallStrW
#define lsAssertaStr lsAssertaStrW
#define lsAssertzStr lsAssertzStrW
#define lsRetractStr lsRetractStrW
#define lsTermToStr lsTermToStrW
#define lsTermToStrQ lsTermToStrQW
#define lsStrToTerm lsStrToTermW
#define lsMakeAtom lsMakeAtomW
#define lsMakeStr lsMakeStrW
#define lsGetFA lsGetFAW
#define lsMakeFA lsMakeFAW
#define lsGetVersion lsGetVersionW
#define lsGetExceptMsg lsGetExceptMsgW
#define lsGetExceptReadBuffer lsGetExceptReadBufferW
#define lsGetExceptCallStack lsGetExceptCallStackW
#define lsSetOutput lsSetOutputW
#define lsInit lsInitA
#define lsAddLSX lsAddLSXA
#define lsAddPred lsAddPredA
#define lsInitPreds lsInitPredsA
#define lsLoad lsLoadA
#define lsExecStr lsExecStrA
#define lsCallStr lsCallStrA
#define lsAssertaStr lsAssertaStrA
#define lsAssertzStr lsAssertzStrA
#define lsRetractStr lsRetractStrA
#define lsTermToStr lsTermToStrA
#define lsTermToStrQ lsTermToStrQA
#define lsStrToTerm lsStrToTermA
#define lsMakeAtom lsMakeAtomA
#define lsMakeStr lsMakeStrA
#define lsGetFA lsGetFAA
#define lsMakeFA lsMakeFAA
#define lsGetVersion lsGetVersionA
#define lsGetExceptMsg lsGetExceptMsgA
#define lsGetExceptReadBuffer lsGetExceptReadBufferA
#define lsGetExceptCallStack lsGetExceptCallStackA
#define lsSetOutput lsSetOutputA
RC  LSAPI  lsInitLSX(ENGid, VOIDptr);
TF  LSAPI  lsMain(ENGid);
RC  LSAPI  lsReset(ENGid);
RC  LSAPI  lsClose(ENGid);
/* function and predicate parameters */

RC    LSAPI  lsGetParm(ENGid, int, cTYPE, VOIDptr);
pTYPE LSAPI  lsGetParmType(ENGid, int);
int   LSAPI  lsStrParmLen(ENGid, int);
TF LSAPI  lsExecStrA(ENGid, TERMptr, char*);
TF LSAPI  lsCall(ENGid, TERMptr);
TF LSAPI  lsCallStrA(ENGid, TERMptr, char*);
TF LSAPI  lsRedo(ENGid);
RC LSAPI  lsClearCall(ENGid);
/* Asserting and retracting */

RC LSAPI  lsAsserta(ENGid, TERM);
RC LSAPI  lsAssertz(ENGid, TERM);
TF LSAPI  lsRetract(ENGid, TERM);
RC LSAPI  lsAssertaStrA(ENGid, char*);
RC LSAPI  lsAssertzStrA(ENGid, char*);
TF LSAPI  lsRetractStrA(ENGid, char*);
/* String/Term conversion functions */

RC LSAPI  lsTermToStrA(ENGid, TERM, char*, int);
RC LSAPI  lsTermToStrQA(ENGid, TERM, char*, int);
RC LSAPI  lsStrToTermA(ENGid, TERMptr, char*);
/* Making Prolog types */

RC LSAPI  lsMakeAtomA(ENGid, TERMptr, char*);
RC LSAPI  lsMakeStrA(ENGid, TERMptr, char*);
RC LSAPI  lsMakeInt(ENGid, TERMptr, intC);
RC LSAPI  lsMakeFloat(ENGid, TERMptr, double);
RC LSAPI  lsMakeAddr(ENGid, TERMptr, VOIDptr);
/* Getting C values from Prolog terms */

pTYPE LSAPI  lsGetTermType(ENGid, TERM);
RC    LSAPI  lsGetTerm(ENGid, TERM, cTYPE, VOIDptr);
int   LSAPI  lsStrTermLen(ENGid, TERM);
/* Structure hacking functions */

RC  LSAPI  lsGetFAA(ENGid, TERM, char*, ARITYptr);
RC  LSAPI  lsMakeFAA(ENGid, TERMptr, char*, ARITY);
TF  LSAPI  lsUnifyArg(ENGid, TERMptr, int, cTYPE, VOIDptr);
RC  LSAPI  lsGetArg(ENGid, TERM, int, cTYPE, VOIDptr);
pTYPE LSAPI  lsGetArgType(ENGid, TERM, int);
int LSAPI  lsStrArgLen(ENGid, TERM, int);
TF  LSAPI  lsUnify(ENGid, TERM, TERM);
/* List hacking functions */

RC LSAPI  lsMakeList(ENGid, TERMptr);
RC LSAPI  lsPushList(ENGid, TERMptr, TERM);
RC LSAPI  lsPopList(ENGid, TERMptr, cTYPE, VOIDptr);
RC LSAPI  lsGetHead(ENGid, TERM, cTYPE, VOIDptr);
TERM LSAPI  lsGetTail(ENGid, TERM);
/* Stream I/O functions */

RC  LSAPI  lsSetStream(ENGid, STREAM, int);
int LSAPI  lsGetStream(ENGid, STREAM);
RC  LSAPI  lsSetInput(ENGid, pX_GETC, pX_UNGETC);
RC  LSAPI  lsSetOutputA(ENGid, pX_PUTC, pX_PUTSA);
/* Miscellaneous functions */

RC  LSAPI  lsGetVersionA(ENGid, char*);
RC     LSAPI  lsGetExceptRC(ENGid);
void   LSAPI  lsGetExceptMsgA(ENGid, char*, int);
void   LSAPI  lsGetExceptReadBufferA(ENGid, char*, int);
void   LSAPI  lsGetExceptCallStackA(ENGid, char*, int);
TF LSAPI  lsExecStrW(ENGid, TERMptr, wchar_t*);
TF LSAPI  lsCallStrW(ENGid, TERMptr, wchar_t*);
RC LSAPI  lsAssertaStrW(ENGid, wchar_t*);
RC LSAPI  lsAssertzStrW(ENGid, wchar_t*);
TF LSAPI  lsRetractStrW(ENGid, wchar_t*);
RC LSAPI  lsTermToStrW(ENGid, TERM, wchar_t*, int);
RC LSAPI  lsTermToStrQW(ENGid, TERM, wchar_t*, int);
RC LSAPI  lsStrToTermW(ENGid, TERMptr, wchar_t*);
RC LSAPI  lsMakeAtomW(ENGid, TERMptr, wchar_t*);
RC LSAPI  lsMakeStrW(ENGid, TERMptr, wchar_t*);
RC  LSAPI  lsGetFAW(ENGid, TERM, wchar_t*, ARITYptr);
RC  LSAPI  lsMakeFAW(ENGid, TERMptr, wchar_t*, ARITY);
RC  LSAPI  lsSetOutputW(ENGid, pX_PUTC, pX_PUTSW);
RC  LSAPI  lsGetVersionW(ENGid, wchar_t*);
void   LSAPI  lsGetExceptMsgW(ENGid, wchar_t*, int);
void   LSAPI  lsGetExceptReadBufferW(ENGid, wchar_t*, int);
void   LSAPI  lsGetExceptCallStackW(ENGid, wchar_t*, int);
inline void CLogicServer::Init(aCHAR* ininame)
{
   RC rc = lsInit(&m_eng, ininame);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::InitLSX(void * vp)
{
   RC rc = lsInitLSX(m_eng, vp);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::InitLSX()
{
   RC rc = lsInitLSX(m_eng, NULL);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::AddLSX(aCHAR* s, void * vp)
{
   RC rc = lsAddLSX(m_eng, s, vp);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::AddLSX(aCHAR* s)
{
   RC rc = lsAddLSX(m_eng, s, NULL);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::AddPred(aCHAR* s, ARITY a, ExtPred f, VOIDptr v)
{
   RC rc = lsAddPred(m_eng, s, a, f, v);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::InitPreds(PRED_INITptr preds)
{
   RC rc = lsInitPreds(m_eng, preds);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::Load(aCHAR* xplname)
{
   RC rc = lsLoad(m_eng, xplname);
   if (rc) THROW_LSEXCEPTION;
}
inline TF CLogicServer::Main(void)
{
   TF tf = lsMain(m_eng);
   if (tf != TRUE && tf != FALSE)
      THROW_LSEXCEPTION;
   return tf;
}
inline void CLogicServer::Reset(void)
{
   RC rc = lsReset(m_eng);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::Close(void)
{
   RC rc = lsClose(m_eng);
   if (rc) THROW_LSEXCEPTION;
}
// function and predicate parameters

inline void CLogicServer::GetParm(int i, cTYPE ct, void * vp)
{
   RC rc = lsGetParm(m_eng, i, ct, vp);
   if (rc) THROW_LSEXCEPTION;
}
inline pTYPE CLogicServer::GetParmType(int i)
{
    pTYPE pT = lsGetParmType(m_eng, i);
   if (pT == pERR)
      THROW_LSEXCEPTION;
   return pT;
}
inline int CLogicServer::StrParmLen(int i)
{
   int len = lsStrParmLen(m_eng, i);
   if (len == NOTOK)
      THROW_LSEXCEPTION;
   return len;
}
inline void   CLogicServer::Init(char * ininame)
{
   RC rc = lsInitA(&m_eng, ininame);
   if (rc) THROW_LSEXCEPTION;
}
inline void   CLogicServer::AddLSX(char* s, void * vp)
{
   RC rc = lsAddLSXA(m_eng, s, vp);
   if (rc) THROW_LSEXCEPTION;
}
inline void   CLogicServer::AddLSX(char* s)
{
   RC rc = lsAddLSXA(m_eng, s, NULL);
   if (rc) THROW_LSEXCEPTION;
}
inline void   CLogicServer::AddPred(char* s, ARITY a, ExtPred f, VOIDptr v)
{
   RC rc = lsAddPredA(m_eng, s, a, f, v);
   if (rc) THROW_LSEXCEPTION;
}
inline void CLogicServer::InitPreds(PRED_INITAptr preds)
{
   RC rc = lsInitPredsA(m_eng, preds);
   if (rc) THROW_LSEXCEPTION;
}
inline void   CLogicServer::Load(char *xplname)
{
   RC rc = lsLoadA(m_eng, xplname);
   if (rc) THROW_LSEXCEPTION;
}