interfaces/dotnet/include/logicserver.h

// function and predicate parameters

inline double LogicServer::GetFloatParm(int i)
{
   double f;
   RC rc = lsGetParm(m_eng, i, cDOUBLE, &f);
   return f;
}
inline int LogicServer::GetIntParm(int i)
{
   int v;
   RC rc = lsGetParm(m_eng, i, cINT, &v);
   return v;
}