langbindings/delphi/amzi.pas


function lsExecStrA(Eng: TEngID; var TP: TTerm; S: PAnsiChar): TTFi; stdcall; external AMZIDLL;
function lsExecStrW(Eng: TEngID; var TP: TTerm; S: PWideChar): TTFi; stdcall; external AMZIDLL;
function lsExecStr(Eng: TEngID; var TP: TTerm; S: PChar): TTFi; stdcall; external AMZIDLL name 'lsExecStr' + AWSuffix;

function lsCall(Eng: TEngID; var TP: TTerm): TTFi; stdcall; external AMZIDLL;

function lsCallStrA(Eng: TEngID; var TP: TTerm; S: PAnsiChar): TTFi; stdcall; external AMZIDLL;
function lsCallStrW(Eng: TEngID; var TP: TTerm; S: PWideChar): TTFi; stdcall; external AMZIDLL;
function lsCallStr(Eng: TEngID; var TP: TTerm; S: PChar): TTFi; stdcall; external AMZIDLL name 'lsCallStr' + AWSuffix;

function lsRedo(Eng: TEngID): TTFi; stdcall; external AMZIDLL;
function lsClearCall(Eng: TEngID): TRC; stdcall; external AMZIDLL;

{ Asserting and retracting }
function lsAsserta(Eng: TEngID; T: TTerm): TRC; stdcall; external AMZIDLL;
function lsAssertz(Eng: TEngID; T: TTerm): TRC; stdcall; external AMZIDLL;
function lsRetract(Eng: TEngID; T: TTerm): TRC; stdcall; external AMZIDLL;

function lsAssertaStrA(Eng: TEngID; S: PAnsiChar): TRC; stdcall; external AMZIDLL;
function lsAssertaStrW(Eng: TEngID; S: PWideChar): TRC; stdcall; external AMZIDLL;
function lsAssertaStr(Eng: TEngID; S: PChar): TRC; stdcall; external AMZIDLL name 'lsAssertaStr' + AWSuffix;

function lsAssertzStrA(Eng: TEngID; S: PAnsiChar): TRC; stdcall; external AMZIDLL;
function lsAssertzStrW(Eng: TEngID; S: PWideChar): TRC; stdcall; external AMZIDLL;
function lsAssertzStr(Eng: TEngID; S: PChar): TRC; stdcall; external AMZIDLL name 'lsAssertzStr' + AWSuffix;

function lsRetractStrA(Eng: TEngID; S: PAnsiChar): TRC; stdcall; external AMZIDLL;
function lsRetractStrW(Eng: TEngID; S: PWideChar): TRC; stdcall; external AMZIDLL;
function lsRetractStr(Eng: TEngID; S: PChar): TRC; stdcall; external AMZIDLL name 'lsRetractStr' + AWSuffix;

{ string/term conversion functions }
function lsTermToStrA(Eng: TEngID; T: TTerm; S: PAnsiChar; N: Integer): TRC; stdcall; external AMZIDLL;
function lsTermToStrW(Eng: TEngID; T: TTerm; S: PWideChar; N: Integer): TRC; stdcall; external AMZIDLL;
function lsTermToStr(Eng: TEngID; T: TTerm; S: PChar; N: Integer): TRC; stdcall;  external AMZIDLL name 'lsTermToStr' + AWSuffix;

function lsTermToStrQA(Eng: TEngID; T: TTerm; S: PAnsiChar; N: Integer): TRC; stdcall; external AMZIDLL;
function lsTermToStrQW(Eng: TEngID; T: TTerm; S: PWideChar; N: Integer): TRC; stdcall; external AMZIDLL;
function lsTermToStrQ(Eng: TEngID; T: TTerm; S: PChar; N: Integer): TRC; stdcall; external AMZIDLL name 'lsTermToStrQ' + AWSuffix;

function lsStrToTermA(Eng: TEngID; var TP: TTerm; S: PAnsiChar): TRC; stdcall; external AMZIDLL;
function lsStrToTermW(Eng: TEngID; var TP: TTerm; S: PWideChar): TRC; stdcall; external AMZIDLL;
function lsStrToTerm(Eng: TEngID; var TP: TTerm; S: PChar): TRC; stdcall; external AMZIDLL name 'lsStrToTerm' + AWSuffix;

{ Making Prolog types }
function lsMakeAtomA(Eng: TEngID; var TP: TTerm; S: PAnsiChar): TRC; stdcall; external AMZIDLL;
function lsMakeAtomW(Eng: TEngID; var TP: TTerm; S: PWideChar): TRC; stdcall; external AMZIDLL;
function lsMakeAtom(Eng: TEngID; var TP: TTerm; S: PChar): TRC; stdcall; external AMZIDLL name 'lsMakeAtom' + AWSuffix;

function lsMakeStrA(Eng: TEngID; var TP: TTerm; S: PAnsiChar): TRC; stdcall; external AMZIDLL;
function lsMakeStrW(Eng: TEngID; var TP: TTerm; S: PWideChar): TRC; stdcall; external AMZIDLL;
function lsMakeStr(Eng: TEngID; var TP: TTerm; S: PChar): TRC; stdcall; external AMZIDLL name 'lsMakeStr' + AWSuffix;

function lsMakeInt(Eng: TEngID; var TP: TTerm; I: LongInt): TRC; stdcall; external AMZIDLL;
function lsMakeFloat(Eng: TEngID; var TP: TTerm; F: Double): TRC; stdcall; external AMZIDLL;
function lsMakeAddr(Eng: TEngID; var TP: TTerm; P: Pointer): TRC; stdcall; external AMZIDLL;

{ Getting C values from Prolog terms }
function lsGetTermType(Eng: TEngID; T: TTerm): TTypeInt; stdcall; external AMZIDLL;
function lsGetTerm(Eng: TEngID; T: TTerm; DT: TTypeInt; P: Pointer): TRC; stdcall; external AMZIDLL;
function lsStrTermLen(Eng: TEngID; T: TTerm): Integer; stdcall; external AMZIDLL;

{ Structure hacking functions }
function lsGetFAA(Eng: TEngID; T: TTerm; S: PAnsiChar; var AP: TArity): TRC; stdcall; external AMZIDLL;
function lsGetFAW(Eng: TEngID; T: TTerm; S: PWideChar; var AP: TArity): TRC; stdcall; external AMZIDLL;
function lsGetFA(Eng: TEngID; T: TTerm; S: PChar; var AP: TArity): TRC; stdcall; external AMZIDLL name 'lsGetFA' + AWSuffix;

function lsMakeFAA(Eng: TEngID; var TP: TTerm; S: PAnsiChar; A: TArity): TRC; stdcall; external AMZIDLL;
function lsMakeFAW(Eng: TEngID; var TP: TTerm; S: PWideChar; A: TArity): TRC; stdcall; external AMZIDLL;
function lsMakeFA(Eng: TEngID; var TP: TTerm; S: PChar; A: TArity): TRC; stdcall; external AMZIDLL name 'lsMakeFA' + AWSuffix;

function lsUnifyArg(Eng: TEngID; var TP: TTerm; N: Integer; DT: TTypeInt; P: Pointer): TTFi; stdcall; external AMZIDLL;
function lsGetArg(Eng: TEngID; T: TTerm; N: Integer; DT: TTypeInt; P: Pointer): TRC; stdcall; external AMZIDLL;
function lsGetArgType(Eng: TEngID; T: TTerm; N: Integer): TTypeInt; stdcall; external AMZIDLL;
function lsStrArgLen(Eng: TEngID; T: TTerm; I: Integer): Integer; stdcall; external AMZIDLL;
function lsUnify(Eng: TEngID; T1: TTerm; T2: TTerm): TTFi; stdcall; external AMZIDLL;

{ List hacking functions }
function lsMakeList(Eng: TEngID; var TP: TTerm): TRC; stdcall; external AMZIDLL;
function lsPushList(Eng: TEngID; var TP: TTerm; T: TTerm): TRC; stdcall; external AMZIDLL;
function lsPopList(Eng: TEngID; var TP: TTerm; DT: TTypeInt; P: Pointer): TRC; stdcall; external AMZIDLL;
function lsGetHead(Eng: TEngID; T: TTerm; DT: TTypeInt; P: Pointer): TRC; stdcall; external AMZIDLL;
function lsGetTail(Eng: TEngID; T: TTerm): TTerm; stdcall; external AMZIDLL;

{ Stream I/O functions }
function lsSetStream(Eng: TEngID; ST: TPStreamInt; I: Integer): TRC; stdcall; external AMZIDLL;
function lsGetStream(Eng: TEngID; ST: TPStreamInt): Integer; stdcall; external AMZIDLL;
function lsSetInput(Eng: TEngID; PFunc1: TGetC; PFunc2: TUngetC): TRC; stdcall; external AMZIDLL;

function lsSetOutputA(Eng: TEngID; PFunc1: TPutC; PFunc2: TPutSA): TRC; stdcall; external AMZIDLL;
function lsSetOutputW(Eng: TEngID; PFunc1: TPutC; PFunc2: TPutSW): TRC; stdcall; external AMZIDLL;
function lsSetOutput(Eng: TEngID; PFunc1: TPutC; PFunc2: TPutS): TRC; stdcall; external AMZIDLL name 'lsSetOutput' + AWSuffix;

{ Miscellaneous functions }
function lsGetVersionA(Eng: TEngID; S: PAnsiChar): TRC; stdcall; external AMZIDLL;
function lsGetVersionW(Eng: TEngID; S: PWideChar): TRC; stdcall; external AMZIDLL;
function lsGetVersion(Eng: TEngID; S: PChar): TRC; stdcall; external AMZIDLL name 'lsGetVersion' + AWSuffix;

{ Error handling functions }
function lsGetExceptRC(Eng: TEngID): TRC; stdcall; external AMZIDLL;

procedure lsGetExceptMsgA(Eng: TEngID; S: PAnsiChar; L: Integer) stdcall; external AMZIDLL;
procedure lsGetExceptMsgW(Eng: TEngID; S: PWideChar; L: Integer) stdcall; external AMZIDLL;
procedure lsGetExceptMsg(Eng: TEngID; S: PChar; L: Integer) stdcall; external AMZIDLL name 'lsGetExceptMsg' + AWSuffix;

procedure lsGetExceptReadBufferA(Eng: TEngID; S: PAnsiChar; L: Integer) stdcall; external AMZIDLL;
procedure lsGetExceptReadBufferW(Eng: TEngID; S: PWideChar; L: Integer) stdcall; external AMZIDLL;
procedure lsGetExceptReadBuffer(Eng: TEngID; S: PChar; L: Integer) stdcall; external AMZIDLL name 'lsGetExceptReadBuffer' + AWSuffix;

procedure lsGetExceptCallStackA(Eng: TEngID; S: PAnsiChar; L: Integer) stdcall; external AMZIDLL;
procedure lsGetExceptCallStackW(Eng: TEngID; S: PWideChar; L: Integer) stdcall; external AMZIDLL;
procedure lsGetExceptCallStack(Eng: TEngID; S: PChar; L: Integer) stdcall; external AMZIDLL name 'lsGetExceptCallStack' + AWSuffix;

constructor TLSEngine.Create(Owner: TComponent);
begin
  inherited Create(Owner);
  FCreatedB := True;
  FInitializedB := False;
end;

destructor TLSEngine.Destroy;
begin
  if FInitializedB then lsClose(FEng);
  inherited Destroy;
end;

{ The function definitions map Logic Server methods to the
  actual DLL entry points. }

{ Main entry points to set up Prolog environment }

procedure TLSEngine.Init(const XPLName: string);
begin
  InitLS(XPLName);
end;

procedure TLSEngine.InitLS(const XPLName: string);
begin
  if not FCreatedB then
    LSError('LS not created', 0);
  if FInitializedB then
    lsClose(FEng);
  FRC := lsInit(FEng, PChar(XPLName));
  if FRC <> 0 then
    LSError('lsInit', FRC);
  FInitializedB := True;
end;

procedure TLSEngine.InitLSX;
begin
  FRC := lsInitLSX(FEng, nil);
  if FRC <>  0 then LSError('lsInitLSX', FRC);
end;

procedure TLSEngine.InitLSXP(P: Pointer);
begin
  FRC := lsInitLSX(FEng, P);
  if FRC <>  0 then LSError('lsInitLSX', FRC);
end;

procedure TLSEngine.AddLSX(const LSXName: string);
begin
  FRC := lsAddLSX(FEng, PChar(LSXName), nil);
  if FRC <> 0 then LSError('lsAddLSX', FRC);
end;

procedure TLSEngine.AddPred(const PName: string; PArity: TArity; PFunc: TExtPred);
begin
  FRC := lsAddPred(FEng, PChar(PName), PArity, PFunc, Pointer(FEng));
  if FRC <> 0 then LSError('lsAddPred', FRC);
end;

procedure TLSEngine.InitPreds(PIPtr: TPredInitPtr);
begin
  FRC := lsInitPreds(FEng, PIPtr);
  if FRC <> 0 then LSError('lsInitPreds', FRC);
end;

procedure TLSEngine.Load(const XPLName: string);
begin
  LoadXPL(XPLName);
end;

procedure TLSEngine.LoadXPL(const XPLName: string);
begin
  FRC := lsLoad(FEng, PChar(XPLName));
  if FRC <> 0 then LSError('lsLoad', FRC);
end;

function TLSEngine.Main: Boolean;
begin
  Result := False;
  FRC := lsMain(FEng);
  case FRC of
    0: Result := False;
    1: Result := True;
    else LSError('lsMain', FRC);
  end;
end;

procedure TLSEngine.Reset;
begin
  FRC := lsReset(FEng);
  if FRC <> 0 then LSError('lsReset', FRC);
end;

procedure TLSEngine.Close;
begin
  CloseLS;
end;

procedure TLSEngine.CloseLS;
begin
  FRC := lsClose(FEng);
  if FRC <> 0 then LSError('lsClose', FRC);
  FInitializedB := False;
end;

{ Function and predicate parameters }

procedure TLSEngine.GetParm(N: Integer; DT: TDType; P: Pointer);
begin
  FRC := lsGetParm(FEng, N, TTypeInt(DT), P);
  if FRC <> 0 then LSError('lsGetParm', FRC);
end;

function TLSEngine.GetPStrParm(N: Integer): string;
var
  res: string;
begin
  SetLength(res, lsStrParmLen(FEng, N));
  if Length(res) > 0 then
    res[1] := #0;

{$IFDEF UNICODE}
  FRC := lsGetParm(FEng, N, TTypeInt(dWSTR), PWideChar(res));
{$ELSE}
  FRC := lsGetParm(FEng, N, TTypeInt(dSTR), PAnsiChar(res));
{$ENDIF}

  if FRC <> 0 then LSError('lsGetParm', FRC);
  Result := PChar(res);
end;

function TLSEngine.GetIntParm(N: Integer): Integer;
var
  I: Integer;
begin
  FRC := lsGetParm(FEng, N, TTypeInt(dLONG), @I);
  if FRC <> 0 then LSError('lsGetParm', FRC);
  Result := I;
end;

function TLSEngine.GetLongParm(N: Integer): LongInt;
var
  I: LongInt;
begin
  FRC := lsGetParm(FEng, N, TTypeInt(dLONG), @I);
  if FRC <> 0 then LSError('lsGetParm', FRC);
  Result := I;
end;

function TLSEngine.GetShortParm(N: Integer): LongInt;
var
  I: LongInt;
begin
  FRC := lsGetParm(FEng, N, TTypeInt(dSHORT), @I);
  if FRC <> 0 then LSError('lsGetParm', FRC);
  Result := I;
end;

function TLSEngine.GetFloatParm(N: Integer): Double;
var
  F: Double;
begin
  FRC := lsGetParm(FEng, N, TTypeInt(dDOUBLE), @F);
  if FRC <> 0 then LSError('lsGetParm', FRC);
  Result := F;
end;

function TLSEngine.GetParmType(N: Integer): TPType;
begin
  Result := TPType(lsGetParmType(FEng, N));
end;

function TLSEngine.StrParmLen(N: Integer): Integer;
begin
  Result := lsStrParmLen(FEng, N);
end;
